--- a/src/containers/editor/editor.css
+++ b/src/containers/editor/editor.css
@@ -3,6 +3,10 @@
     background-color:#ffffff;
     color: rgb(73, 73, 73);
     height:100%;
+    flex: 0 0 auto;
+    position: relative;
+    outline: none;
+    width: 650px;
 }
 #sd_content {
     flex: 1;
@@ -10,6 +14,16 @@
 }
 .sd_editor {
     font-family: 'Work Sans', Verdana, sans-serif;
+    display: flex;
+    flex: 1 1 0%;
+    height: 100%;
+    position: absolute;
+    outline: none;
+    overflow: hidden;
+    user-select: text;
+    flex-direction: row;
+    left: 0px;
+    right: 0px;
 }
 
 .Resizer {
