Changed node handling to more simple

--- a/src/components/json-editor-wrapper/index.css
+++ b/src/components/json-editor-wrapper/index.css
@@ -3,3 +3,6 @@ div.jsoneditor-menu {
     background-color: #414141;
     border-bottom: 1px solid #aeaeae;
 }
+div.jsoneditor-menu .jsoneditor-poweredBy{
+    display: none;
+}
