--- a/src/components/nodes/node-site-column/index.css
+++ b/src/components/nodes/node-site-column/index.css
@@ -1,5 +1,5 @@
-.sd_site_hierarchy_node_site_column {
-    width:300px;
+.sd_site_hierarchy_node_type_siteColumn .sd_row{
+    width:372px;
 }
 
 .sd_site_hierarchy_node_type_siteColumn i {
