bug fix for issue #14 + small changes

--- a/src/components/json-editor-wrapper/index.css
+++ b/src/components/json-editor-wrapper/index.css
@@ -6,3 +6,9 @@ div.jsoneditor-menu {
 div.jsoneditor-menu .jsoneditor-poweredBy{
     display: none;
 }
+div.jsoneditor {
+    overflow: visible;
+}
+div.ace_scroller {
+    bottom:-12px!important;
+}
