--- a/src/components/sd-code-field/sd-code-field.css
+++ b/src/components/sd-code-field/sd-code-field.css
@@ -1,11 +1,11 @@
-
 .sd_site_hierarchy_code_field .ms-TextField-field {
-    color: rgb(80,80,80);
-    border: 1px solid rgb(204, 204, 204);
-    box-shadow: inset -1px 1px 4px -2px rgba(0,0,0,0.26);
+    color: rgb(80, 80, 80);
+    /* border: 1px solid rgb(204, 204, 204); */
+    border: 1px solid rgb(96, 94, 92);
+    box-shadow: inset -1px 1px 4px -2px rgba(0, 0, 0, 0.26);
     padding-left: 3px;
-
 }
+
 .sd_site_hierarchy_code_field_not_valid {
-    border:1px solid red!important;
+    border: 1px solid red!important;
 }
