--- a/src/components/sd-combo-box/sd-combo-box.css
+++ b/src/components/sd-combo-box/sd-combo-box.css
@@ -1,22 +1,24 @@
-
 .sd_site_hierarchy_combo_box .ms-ComboBox {
     height: 26px;
-    color: rgb(80,80,80);
-    border: 1px solid rgb(204, 204, 204);
-    box-shadow: inset -1px 1px 4px -2px rgba(0,0,0,0.26);
+    color: rgb(80, 80, 80);
+    /* border: 1px solid rgb(204, 204, 204); */
+    box-shadow: inset -1px 1px 4px -2px rgba(0, 0, 0, 0.26);
     padding-left: 3px;
-    margin-bottom:6px;
+    margin-bottom: 6px;
+    border-color: #c1c1c1!important;
 }
+
 .sd_site_hierarchy_combo_box .ms-ComboBox-Input {
-    color: rgb(80,80,80);
-    box-shadow: inset -1px 1px 4px -2px rgba(0,0,0,0.26);
-    height:22px;
+    color: rgb(80, 80, 80);
+    box-shadow: inset -1px 1px 4px -2px rgba(0, 0, 0, 0.26);
+    height: 22px;
 }
+
 .sd_site_hierarchy_combo_box_label {
-        font-size: 11px;
-        padding: 0 0 3px 3px;
-        display: block;
-        font-weight: 400;
-        margin: 0 0 0 10px;
-        font-family: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
+    font-size: 11px;
+    padding: 0 0 3px 3px;
+    display: block;
+    font-weight: 400;
+    margin: 0 0 0 10px;
+    font-family: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
 }
