--- a/src/components/sd-picker-field/sd-picker-field.css
+++ b/src/components/sd-picker-field/sd-picker-field.css
@@ -3,23 +3,28 @@
     margin: 0 10px!important;
     width: calc(100% - 20px);
 }
-.sd_site_hierarchy_field input{
-    padding:0;
+
+.sd_site_hierarchy_field input {
+    padding: 0;
 }
+
 .sd_site_hierarchy_picker_field .ms-Label {
     font-size: 11px;
     padding: 5px 0 5px 11px;
 }
+
 .sd_site_hierarchy_edit_field .ms-BasePicker-text {
-    color: rgb(80,80,80);
-    border: 1px solid rgb(204, 204, 204);
-    box-shadow: inset -1px 1px 4px -2px rgba(0,0,0,0.26);
+    color: rgb(80, 80, 80);
+    /* border: 1px solid rgb(204, 204, 204); */
+    box-shadow: inset -1px 1px 4px -2px rgba(0, 0, 0, 0.26);
     padding-left: 3px;
     min-height: 34px;
 }
+
 .sd_site_hierarchy_edit_field .ms-BasePicker-input {
     height: 26px;
 }
+
 .sd_site_hierarchy_edit_field_simple input {
-    border-top:0!important;
+    border-top: 0!important;
 }
